kubernetes-networks/canary/04-web-ingress-default.yaml
￼
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: canary
    http:
      paths:
      - path: /web
        backend:
          serviceName: web-svc
          servicePort: 8000
